test modif camcam

--- a/css/base/default.css
+++ b/css/base/default.css
@@ -12,6 +12,11 @@ html, body {
   /*height: 100vh;*/
   text-decoration: none;
   /*overflow-x: hidden;*/
+  /* //modif test camcam */
+
+  background-color: red;
+
+  /* /////// */
 }
 
 body{
